// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Logout > Logs out on click > KeyStore.getKey() 1`] = `undefined`;

exports[`Logout > Logs out on click > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('THEME') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Logout > Logs out on click > Storage.get('USERNAME') 1`] = `null`;

exports[`Logout > Logs out on click > allCalls 1`] = `
[
  [
    "request",
    {
      "calledWith": {
        "body": "{"username":"d","password":"1","notes":[],"deleted_notes":[]}",
        "headers": {
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
      "name": "/auth/login",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "accessToken": "test-token",
        "username": "d",
      },
      "name": "set_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": true,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "note": {
          "content": {
            "body": "",
            "delta": {
              "ops": [],
            },
            "title": "",
          },
          "timestamp": 0,
          "uuid": "uuid",
        },
      },
      "name": "new_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "notes": [
          {
            "content": {
              "body": "",
              "delta": {
                "ops": [],
              },
              "title": "",
            },
            "timestamp": 0,
            "uuid": "uuid",
          },
        ],
      },
      "name": "sync_local_notes",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "get_access_token",
    },
  ],
  [
    "request",
    {
      "calledWith": {
        "body": undefined,
        "headers": {
          "Authorization": "Bearer test-token",
          "Content-Security-Policy": "default-src 'self'; connect-src http://localhost:8000;",
          "Content-Type": "application/json",
          "X-Username": "d",
        },
        "method": "POST",
      },
      "name": "/auth/logout",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {
        "username": "d",
      },
      "name": "delete_access_token",
    },
  ],
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`Logout > Logs out on click > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Logout > Logs out on click > mockDb 1`] = `
{
  "deletedNotes": [],
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Logout > Logs out on click > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    {
      "content": {
        "body": "",
        "delta": {
          "ops": [],
        },
        "title": "",
      },
      "timestamp": 0,
      "uuid": "uuid",
    },
  ],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Logout > Logs out on click > openedPopup 1`] = `undefined`;

exports[`Logout > Logs out on click > selectedTheme 1`] = `"System"`;

exports[`Logout > Logs out on click > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Logout > Logs out on click > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Logout > Mounts > KeyStore.getKey() 1`] = `undefined`;

exports[`Logout > Mounts > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('THEME') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Logout > Mounts > Storage.get('USERNAME') 1`] = `null`;

exports[`Logout > Mounts > allCalls 1`] = `[]`;

exports[`Logout > Mounts > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Logout > Mounts > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Logout > Mounts > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Logout > Mounts > openedPopup 1`] = `undefined`;

exports[`Logout > Mounts > selectedTheme 1`] = `"System"`;

exports[`Logout > Mounts > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Logout > Mounts > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
